# zero2prod

./: .env  Cargo.toml  README.md
.github/workflows/: ci.yml
migrations/: 20230302165543_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
