[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio, tls-rustls, postgres"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.14"
